wxc/include/wxc.h



/* wxGridCellTextEnterEditor */
TClassDefExtend(wxGridCellTextEnterEditor,wxGridCellTextEditor)
TClass(wxGridCellTextEnterEditor) wxGridCellTextEnterEditor_Ctor();

void   LogVerbose(TStringVoid _msg);

void   LogStatus(TStringVoid _msg);

void   LogSysError(TStringVoid _msg);

void   LogDebug(TStringVoid _msg);

void   LogTrace(TStringVoid mask, TStringVoid _msg);


/* ConfigBase */
TClassDefExtend(wxFileConfig,wxConfigBase)

TClass(wxConfigBase) wxConfigBase_Get();

void                 wxConfigBase_Set( TClass(wxConfigBase) self );

TClass(wxFileConfig) wxFileConfig_Create( TClass(wxInputStream) inp );