src/cffi/classes/wxExtra.lisp


(cffi:defcfun ("LogVerbose" LogVerbose) :void
  (_msg :pointer))

(cffi:defcfun ("LogStatus" LogStatus) :void
  (_msg :pointer))

(cffi:defcfun ("LogSysError" LogSysError) :void
  (_msg :pointer))

(cffi:defcfun ("LogDebug" LogDebug) :void
  (_msg :pointer))

(cffi:defcfun ("LogTrace" LogTrace) :void
  (mask :pointer)
  (_msg :pointer))

(cffi:defcfun ("wxGridCellTextEnterEditor_Ctor" wxGridCellTextEnterEditor_Ctor) :pointer)

(cffi:defcfun ("wxConfigBase_Get" wxConfigBase_Get) :pointer)

(cffi:defcfun ("wxConfigBase_Set" wxConfigBase_Set) :void
  (self :pointer))

(cffi:defcfun ("wxFileConfig_Create" wxFileConfig_Create) :pointer
  (inp :pointer))


